Versioning Task logs, fixes  & updated JGit