@@ -819,7 +819,7 @@ public class TextEditor extends Editor {
 
     public static void main(String[] args) throws InterruptedException, IOException {
         TextEditor editor = new TextEditor();
-        if ((args.length > 0) && (args[0] != null) & (!args[0].trim().isEmpty())) {
+        if ((args.length > 0) && (args[0] != null) & (!args[0].isBlank())) {
             editor.load(args[0]);
         }
         javax.swing.JFrame frame = editor.getFrame();
